force-app/main/default/objects/Historical_Consent_Staging__c/Historical_Consent_Staging__c.object-meta.xml
<CustomObject>
    <label>Historical Consent Staging</label>
    <nameField>
        <displayFormat>HC-{000000000}</displayFormat>
        <label>Historical Consent Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Consent Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>