force-app/main/default/objects/Historical_Consent_Staging__c/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>