force-app/main/default/objects/Historical_Consent_Staging__c/fields/ConsentData__c.field-meta.xml
<CustomField>
    <fullName>ConsentData__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ConsentData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>