force-app/main/default/objects/Historical_Consent_Staging__c/fields/NctId__c.field-meta.xml
<CustomField>
    <fullName>NctId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nct Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>