force-app/main/default/objects/Historical_Consent_Staging__c/fields/OTCPId__c.field-meta.xml
<CustomField>
    <fullName>OTCPId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OT CP Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>