force-app/main/default/objects/Historical_Consent_Staging__c/fields/OTPurposeId__c.field-meta.xml
<CustomField>
    <fullName>OTPurposeId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OT Purpose Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>