force-app/main/default/objects/Historical_Consent_Staging__c/fields/OTSponsorId__c.field-meta.xml
<CustomField>
    <fullName>OTSponsorId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OT Sponsor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>