force-app/main/default/objects/Historical_Consent_Staging__c/fields/ParticipantPPMID__c.field-meta.xml
<CustomField>
    <fullName>ParticipantPPMID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Participant PPM ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>