force-app/main/default/objects/Historical_Consent_Staging__c/fields/PPName__c.field-meta.xml
<CustomField>
    <fullName>PPName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>