force-app/main/default/objects/Historical_Consent_Staging__c/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>